--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/jeanarose/employee-tracker#readme",
   "dependencies": {
+    "clear": "^0.1.0",
     "inquirer": "^7.3.3",
     "mysql": "^2.18.1"
   }
